[pycodestyle]
quiet = 1
ignore = E231,W503


[precommit]
doctest_modules = {MODULES_WITH_DOCTESTS}
python_files = *
    {PACKAGE}/*
    examples/*
    tests/*
rst_files = *
    docs/*
unit_tests = tests


[metadata]
name = {PACKAGE}
version = 0.0.1
author = Paul J. Iutzi
author_email = pji@mac.com
description = {PACKAGE_DESCRIPTION}
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pji/{PACKAGE}
project_urls =
    Bug Tracker = https://github.com/pji/{PACKAGE}/issues
classifiers = 
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
zip_safe = False
package_dir =
    = .
packages = find:
python_requires = >= 3.10
